...
  @override
  Widget build(BuildContext context) {
    Exercise e = Exercise('name', widget.type, widget.muscle, 'equipment',
        widget.difficulty, 'instructions');
    return Scaffold(
      appBar: AppBar(
        title: const Text("Be Fit"),
        centerTitle: true,
        backgroundColor: Colors.brown,
      ),
      body: Center(
        child: FutureBuilder<List<dynamic>>(
          future: e.fetchExercises(),
...
